--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -14,8 +14,8 @@ const projects = (await getCollection('work')).sort(
 ---
 
 <BaseLayout
-	title="My Work | Jeanine White"
-	description="Learn about Jeanine White's most recent projects"
+	title="My Work | A. Ezequiel Irace"
+	description="Learn about A. Ezequiel Irace's most recent projects"
 >
 	<div class="stack gap-20">
 		<main class="wrapper stack gap-8">
