--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -7,6 +7,7 @@ import type { iconPaths } from './IconPaths';
 const textLinks: { label: string; href: string }[] = [
 	{ label: 'Home', href: '/' },
 	{ label: 'Work', href: '/work/' },
+	{ label: 'Dolarizacion', href: '/dolarizacion/' },
 	{ label: 'About', href: '/about/' },
 	{label: 'Login', href:'/login/'},
 ];
@@ -15,7 +16,7 @@ const textLinks: { label: string; href: string }[] = [
 const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths }[] = [
 	{ label: 'Twitter', href: 'https://twitter.com/me', icon: 'twitter-logo' },
 	{ label: 'Twitch', href: 'https://twitch.tv/me', icon: 'twitch-logo' },
-	{ label: 'GitHub', href: 'https://github.com/me', icon: 'github-logo' },
+	{ label: 'GitHub', href: 'https://github.com/Eze323', icon: 'github-logo' },
 	{ label: 'CodePen', href: 'https://codepen.io/me', icon: 'codepen-logo' },
 	{ label: 'dribbble', href: 'https://dribbble.com/me', icon: 'dribbble-logo' },
 	{ label: 'YouTube', href: 'https://www.youtube.com/@me/', icon: 'youtube-logo' },
