--- a/src/pages/dolarizacion.astro
+++ b/src/pages/dolarizacion.astro
@@ -31,7 +31,7 @@ import Hero from '../components/Hero.astro';
 					</p>
 					<p>
 						Esto hace que el ciudadano vuelva a confiar y pasas a un régimen de credibilidad, por ende genera una estabilización. 
-                        Esta misma estabilización hace que tambien genere una baja en el riesgo de tasa de interes y aparezcan los creditos
+                        Esta misma estabilización hace que tambien genere una baja en el riesgo de tasa de interes y aparezcan los creditos.
 					</p>
 					<p>
 						Ultrices tincidunt arcu non sodales neque sodales ut. Sed enim ut sem viverra aliquet
