--- a/src/components/LoginForm.astro
+++ b/src/components/LoginForm.astro
@@ -9,7 +9,7 @@
   <form action="procesar_login.php" method="post">
       <div class="form-group">
           <label for="usuario">Usuario:</label>
-          <input type="email" id="user" name="email" required>
+          <input type="text" id="user" name="username" required>
       </div>
       <div class="form-group">
           <label for="password">Contraseña:</label>
@@ -66,7 +66,7 @@ label {
     margin-bottom: 5px;
 }
 
-input[type="email"],
+input[type="text"],
 input[type="password"] {
     width: 100%;
     padding: 10px;
